syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Validate (ValidateRequest) returns (ValidateResponse) {}
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string role = 3;
    string firstName = 4;
  string lastName = 5;
}

message RegisterResponse {
  int32 status = 1;
  repeated string error = 2;
  int32 userId = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int32 status = 1;
  repeated string error = 2;
  string token = 3;
}

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  int32 status = 1;
  repeated string error = 2;
  int32 userId = 3;
  string role = 4;
}